<?xml version="1.0" encoding="utf-8"?>
<!-- Translation instructions can be found in the Readme -->
<resources
        xmlns:tools="http://schemas.android.com/tools"
        tools:ignore="MissingTranslation, ExtraTranslation">
    <string name="app_name">Tabletop Tools</string>
    <string name="app_description">Handy tool collection for tabletop games</string>
    <string name="settings">Settings</string>

    <!-- ROT13: https://en.wikipedia.org/wiki/ROT13 -->
    <string name="menu_rot13">ROT13</string>
    <string name="rot13_could_not_rotate">Couldn\'t rotate automatically</string>
    <string name="rot13_rotate_automatically">Rotate automatically</string>
    <plurals name="rot13_hint">
        <item quantity="one">All latin letters will be rotated by %d place (can be set below)</item>
        <item quantity="other">All latin letters will be rotated by %d places (can be set below)</item>
    </plurals>
    <!-- 100 most common words in English (from https://en.wikipedia.org/wiki/Most_common_words_in_English). Don't translate them, but use the most common words in your language. These words are used to automatically decrypt ROT13 -->
    <string-array name="rot13_common_words">
        <item>the</item>
        <item>be</item>
        <item>to</item>
        <item>of</item>
        <item>and</item>
        <item>a</item>
        <item>in</item>
        <item>that</item>
        <item>have</item>
        <item>I</item>
        <item>it</item>
        <item>for</item>
        <item>not</item>
        <item>on</item>
        <item>with</item>
        <item>he</item>
        <item>as</item>
        <item>you</item>
        <item>do</item>
        <item>at</item>
        <item>this</item>
        <item>but</item>
        <item>his</item>
        <item>by</item>
        <item>from</item>
        <item>they</item>
        <item>we</item>
        <item>say</item>
        <item>her</item>
        <item>she</item>
        <item>or</item>
        <item>an</item>
        <item>will</item>
        <item>my</item>
        <item>one</item>
        <item>all</item>
        <item>would</item>
        <item>there</item>
        <item>their</item>
        <item>what</item>
        <item>so</item>
        <item>up</item>
        <item>out</item>
        <item>if</item>
        <item>about</item>
        <item>who</item>
        <item>get</item>
        <item>which</item>
        <item>go</item>
        <item>me</item>
        <item>when</item>
        <item>make</item>
        <item>can</item>
        <item>like</item>
        <item>time</item>
        <item>no</item>
        <item>just</item>
        <item>him</item>
        <item>know</item>
        <item>take</item>
        <item>people</item>
        <item>into</item>
        <item>year</item>
        <item>your</item>
        <item>good</item>
        <item>some</item>
        <item>could</item>
        <item>them</item>
        <item>see</item>
        <item>other</item>
        <item>than</item>
        <item>then</item>
        <item>now</item>
        <item>look</item>
        <item>only</item>
        <item>come</item>
        <item>its</item>
        <item>over</item>
        <item>think</item>
        <item>also</item>
        <item>back</item>
        <item>after</item>
        <item>use</item>
        <item>two</item>
        <item>how</item>
        <item>our</item>
        <item>work</item>
        <item>first</item>
        <item>well</item>
        <item>way</item>
        <item>even</item>
        <item>new</item>
        <item>want</item>
        <item>because</item>
        <item>any</item>
        <item>these</item>
        <item>give</item>
        <item>day</item>
        <item>most</item>
        <item>us</item>
    </string-array>

    <!-- Alphabet -->
    <string name="menu_alphabet">Alphabet</string>
    <string name="alphabet_letter">Letter</string>
    <string name="alphabet_number">Position</string>

    <!-- Number converter -->
    <string name="menu_number_converter">Number converter</string>
    <string name="number_converter_decimal">Decimal</string>
    <string name="number_converter_binary">Binary</string>
    <string name="number_converter_hexadecimal">Hexadecimal</string>

    <!-- Titles for start page -->
    <string name="menu_dice_value" translatable="false">dice</string>
    <string name="menu_timer_value" translatable="false">timer</string>
    <string name="menu_buzzers_value" translatable="false">buzzer</string>
    <string name="menu_random_list_value" translatable="false">random</string>
    <string name="menu_rot13_value" translatable="false">rot13</string>
    <string name="menu_alphabet_value" translatable="false">alphabet</string>
    <string name="menu_number_converter_value" translatable="false">converter</string>

    <!-- Dice -->
    <string name="menu_dice">Dice</string>
    <string name="dice_slider_hint">Number of dice: %d</string>
    <string name="dice_overall_inc_slider_hint">Add to overall result: %d</string>
    <string name="dice_roll_inc_slider_hint">Add to each roll: %d</string>
    <!-- Dice with %d sides -->
    <string name="dice_d_d">D%d</string>
    <string name="dice_max_count">Max. dice count</string>
    <string name="dice_show_overall_inc_slider">Show \"Add to overall result\" slider</string>
    <string name="dice_show_roll_inc_slider">Show \"Add to each roll\" slider</string>

    <!-- Timer -->
    <string name="menu_timer">Timer</string>
    <string name="timer_start">Start</string>
    <string name="timer_pause">Pause</string>
    <string name="timer_reset">Reset</string>
    <!-- Abr. of minutes -->
    <string name="timer_select_min">Min</string>
    <!-- Abr. of seconds -->
    <string name="timer_select_sec">Sec</string>
    <string name="timer_set_time">Set time</string>

    <!-- Buzzers -->
    <string name="menu_buzzers">Buzzers</string>
    <string name="buzzers_player_a">Player A</string>
    <string name="buzzers_player_b">Player B</string>
    <string name="buzzers_player_c">Player C</string>
    <string name="buzzers_player_d">Player D</string>
    <string name="random_list_hint">Enter values separated by new lines</string>
    <string name="menu_random_list">Randomize list</string>
    <string name="random_list_clear_list">Clear list</string>
    <string name="random_list_sort_list">Sort list</string>
    <string name="random_list_clear_list_confirm">Do you want to clear the list?</string>
    <plurals name="buzzers_amount">
        <item quantity="one">%d buzzer</item>
        <item quantity="other">%d buzzers</item>
    </plurals>

    <!-- Preferences -->
    <string name="start_page">Start page</string>
    <string name="general">General</string>
    <string name="menu_preferences">Settings</string>
    <string name="keep_screen_on_enabled">Keep screen on</string>
    <string name="keep_screen_on_disabled">Don\'t keep screen on</string>
    <string name="buzzer_sound">Sound</string>
    <string name="buzzer_sound_none">None</string>
    <string name="buzzer_sound_buzzer">Buzzer</string>

    <!--  About menu  -->
    <string name="about">About</string>
    <string name="error_no_browser_found">No browser found</string>
    <string name="aboutLibraries_description_special1_name" translatable="false">GitHub</string>
    <string name="aboutLibraries_description_special2_name" translatable="false">F-Droid</string>
    <string name="aboutLibraries_description_special3_name" translatable="false">Crowdin</string>
</resources>
