<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_dice"
                android:icon="@drawable/ic_menu_dice"
                android:title="@string/menu_dice" />
        <item
                android:id="@+id/nav_random_list"
                android:icon="@drawable/ic_baseline_format_list_bulleted_24"
                android:title="@string/menu_random_list" />
        <item
                android:id="@+id/nav_rot13"
                android:icon="@drawable/ic_outline_text_rotation_angleup"
                android:title="@string/menu_rot13" />
        <item
                android:id="@+id/nav_alphabet"
                android:icon="@drawable/ic_alphabetical_variant_24"
                android:title="@string/menu_alphabet" />
        <item
                android:id="@+id/nav_number_converter"
                android:icon="@drawable/ic_menu_number_converter"
                android:title="@string/menu_number_converter" />

        <item
                android:id="@+id/nav_prime_fac"
                android:icon="@drawable/ic_division"
                android:title="@string/menu_prime_fac" />

        <item
                android:id="@+id/nav_timer"
                android:icon="@drawable/ic_baseline_timer_24"
                android:title="@string/menu_timer" />
        <item
                android:id="@+id/nav_buzzers"
                android:icon="@drawable/ic_radio_button_unchecked"
                android:title="@string/menu_buzzers" />
        <item
                android:id="@+id/nav_prefs"
                android:icon="@drawable/ic_outline_settings_24"
                android:title="@string/menu_preferences" />
    </group>
</menu>