<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        app:startDestination="@+id/nav_dice">

    <fragment
            android:id="@+id/nav_dice"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.DiceFragment"
            android:label="@string/menu_dice"
            tools:layout="@layout/fragment_dice" />

    <fragment
            android:id="@+id/nav_counter"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.CounterFragment"
            android:label="@string/menu_counter"
            tools:layout="@layout/fragment_counter" />

    <fragment
            android:id="@+id/nav_random_list"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.RandomListFragment"
            android:label="@string/menu_random_list"
            tools:layout="@layout/fragment_random_list" />

    <fragment
            android:id="@+id/nav_rot13"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.Rot13Fragment"
            android:label="@string/menu_rot13"
            tools:layout="@layout/fragment_rot13" />

    <fragment
            android:id="@+id/nav_alphabet"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.AlphabetFragment"
            android:label="@string/menu_alphabet"
            tools:layout="@layout/fragment_alphabet" />

    <fragment
            android:id="@+id/nav_number_converter"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.NumberConverterFragment"
            android:label="@string/menu_number_converter"
            tools:layout="@layout/fragment_number_converter" />

    <fragment
            android:id="@+id/nav_prime_fac"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.PrimeFacFragment"
            android:label="@string/menu_prime_fac"
            tools:layout="@layout/fragment_prime_fac" />

    <fragment
            android:id="@+id/nav_timer"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.TimerFragment"
            android:label="@string/menu_timer"
            tools:layout="@layout/fragment_timer" />

    <fragment
            android:id="@+id/nav_buzzers"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.BuzzersFragment"
            android:label="@string/menu_buzzers"
            tools:layout="@layout/fragment_buzzers" />

    <fragment
            android:id="@+id/nav_frosthaven"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.FrosthavenFragment"
            android:label="@string/menu_frosthaven"
            tools:layout="@layout/fragment_frosthaven" />

    <fragment
            android:id="@+id/nav_prefs"
            android:name="com.github.muellerma.tabletoptools.ui.fragments.PreferenceFragment"
            android:label="@string/menu_preferences" />
</navigation>